tests/typing/bad/testfile-void-16.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { int x; int y; y = --x = 1; }
